# learning_activties

./: .gitignore  DELETE_FUNCTIONALITY_GUIDE.md  GENAI_SETUP.md  LEARNING_ACTIVITIES_TEST_GUIDE.md  LMS_USER_GUIDE.md  README.md  README_CYCY.md  UV_GUIDE.md  check_all_data.py  check_delete_integration.py  check_mongodb.py  check_raw_wordcloud_data.py  check_routes.py  check_shortanswer_submissions.py  check_shortanswers.py  check_users.py  check_wordcloud_data.py  check_wordclouds.py  cleanup_demo_accounts.py  clear_quiz_submissions.py  clear_wordcloud_submissions.py  compare_apis.py  create_real_users.py  debug_wordcloud_api.html  demo_activities_full.py  fix_auth.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  quick_clear_wordclouds.py  run_poll_system.md  run_tests.py  start_project.py  start_system.py  test_activities_advanced.py  test_activities_models.py  test_all_apis.py  test_auth_api.py  test_delete_functionality.py  (+15 more)
backend/: QUICK_START.md  README_USER_MANAGEMENT.md  TODO.md  app.py  app_local.py  conftest.py  create_users.py  debug_poll_creation.py  env.example  fix_log_git_log.txt  fix_log_git_show_full.txt  fix_log_git_show_names.txt  fix_log_health.json  fix_log_status.txt  requirements.txt  run_test_server.py  run_test_server_only.py  run_tests_with_server.py  run_unit_tests_learning_activities.py  setup_mongodb.py  temp_wordcloud_fix.py  test_mongodb.py
database/: init_db.py
frontend/: ai-assistant.html  check-login.html  clear-cache.html  courses.html  debug-activities.html  index.html  (+36 more)
frontend-tests/: polls.spec.js
(+108 files in other folders)
