[project]
name = "comp5241-group10-lms"
version = "1.0.0"
description = "Learning Management System for COMP5241 Group 10"
authors = [
    {name = "COMP5241 Group 10"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Flask Dependencies
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "Flask-JWT-Extended==4.6.0",
    # Database
    "pymongo==4.6.0",
    "mongoengine==0.27.0",
    # Security
    "bcrypt==4.1.2",
    "python-dotenv==1.0.0",
    "cryptography==46.0.1",
    # GenAI Dependencies removed
    # Validation and Serialization
    "marshmallow==3.20.2",
    "email-validator==2.1.0",
    # Production Server
    "gunicorn==21.2.0",
    # Utilities
    "python-dateutil==2.8.2",
    # Encrypted zip
    "pyzipper==0.3.6",
]

[project.optional-dependencies]
dev = [
    # Development Tools
    "pytest==7.4.4",
    "pytest-flask==1.3.0",
    "black==23.12.1",
    "flake8==7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
    "pytest-flask==1.3.0",
    "black==23.12.1",
    "flake8==7.0.0",
    "colorama>=0.4.6",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
